syntax = "proto3";

package course.event;

option go_package = "github.com/moswil/course-management/internal/core/domain/event/pb";

message CourseCreatedEvent {
  string course_id = 1;
  string title = 2;
  string instructor = 3;
  // Add other fields as needed
}